[APP-1319] Reverted implmentation of gdpr dialog to have the previously solution where the user needs to accept the gdpr and pp in the login flow

--- a/app/src/main/res/layout-land/fragment_login_sign_up_credentials.xml
+++ b/app/src/main/res/layout-land/fragment_login_sign_up_credentials.xml
@@ -95,6 +95,17 @@
         android:layout_marginLeft="19dp"
         tools:visibility="visible"
         >
+      <CheckBox
+          android:id="@+id/tc_checkbox"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:paddingTop="14dp"
+          android:paddingBottom="8dp"
+          android:visibility="gone"
+          tools:visibility="visible"
+          />
+
       <TextView
           android:id="@+id/terms_and_conditions"
           style="@style/Aptoide.TextView.Regular.XS.BlackAlpha"
