--- a/app/src/main/res/layout/fragment_login_sign_up_credentials.xml
+++ b/app/src/main/res/layout/fragment_login_sign_up_credentials.xml
@@ -83,4 +83,39 @@
 
   </LinearLayout>
 
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="19dp"
+      android:layout_marginLeft="19dp"
+      android:layout_marginBottom="8dp"
+      tools:visibility="visible"
+      >
+
+    <CheckBox
+        android:id="@+id/tc_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
+    <TextView
+        android:id="@+id/terms_and_conditions"
+        style="@style/Aptoide.TextView.Regular.XS.BlackAlpha"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="start"
+        android:visibility="gone"
+        tools:text="@string/accept_terms_signup"
+        tools:visibility="visible"
+        />
+  </LinearLayout>
+
 </LinearLayout>
