--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/eskills_apps_bundle_item_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
