--- a/payments/osp-handler/src/main/res/values/styles.xml
+++ b/payments/osp-handler/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <style name="Theme.AppCompat.Transparent.NoDisplay" parent="Theme.AppCompat">
+  <style name="Theme.MaterialComponents.Transparent.NoDisplay" parent="Theme.MaterialComponents">
     <item name="android:backgroundDimEnabled">false</item>
     <item name="android:windowActionBar">false</item>
     <item name="android:windowNoTitle">true</item>
@@ -9,5 +9,6 @@
     <item name="android:windowBackground">@android:color/transparent</item>
     <item name="android:windowContentOverlay">@null</item>
     <item name="windowNoTitle">true</item>
+
   </style>
 </resources>
