[APP-2035] New eskills_app_home_item

--- a/app/src/main/res/layout/eskills_app_home_item.xml
+++ b/app/src/main/res/layout/eskills_app_home_item.xml
@@ -7,12 +7,13 @@
     android:layout_height="165dp"
     android:clickable="true"
     android:focusable="true"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="8dp"
     >
 
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="@drawable/eskills_app_item_gradient"
       android:orientation="vertical"
       android:paddingTop="8dp"
       android:paddingBottom="5dp"
@@ -42,7 +43,7 @@
 
       <TextView
           android:id="@+id/name"
-          style="@style/Aptoide.TextView.Regular.XS.BlackAlpha"
+          style="@style/Aptoide.TextView.Regular.XS.White"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:lines="2"
@@ -52,23 +53,27 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="3dp"
+          android:layout_marginTop="2dp"
           android:orientation="horizontal"
           >
 
         <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:src="@drawable/ic_eskills_appc_logo"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_star_white"
             />
 
         <TextView
-            android:id="@+id/appc_text"
-            style="@style/Aptoide.TextView.Medium.XXS.BlackAlpha"
+            android:id="@+id/rating_label"
+            style="@style/Aptoide.TextView.Medium.XXS.White"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            tools:ignore="SmallSp"
+            tools:text="2.3"
             android:text="@string/eskills_header"
             />
 
