--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -1,30 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/eskills_apps_bundle_item_linear_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:background="?attr/eskillsBundleBackground"
+    android:background="@drawable/eskills_bg"
     android:clipChildren="false"
     android:orientation="vertical"
-    android:paddingBottom="18dp"
+    android:paddingBottom="24dp"
     >
 
-  <include
-      layout="@layout/eskills_home_bundle_header"
-      />
-
-  <TextView
-      style="@style/Aptoide.TextView.Medium.M.BlackAlpha"
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:layout_marginLeft="8dp"
-      android:layout_marginBottom="16dp"
-      android:text="@string/eskills_home_subtitle"
-      tools:text="Beat other Players with e-skills"
-      />
+    >
+    <ImageView
+        android:id="@+id/eskills_logo"
+        android:layout_width="32dp"
+        android:layout_height="24dp"
+        app:layout_constraintStart_toStartOf="@id/eskills_art"
+        app:layout_constraintEnd_toEndOf="@id/eskills_art"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="24dp"
+
+        android:src="@drawable/eskills_logo"
+        />
+    <ImageView
+        android:id="@+id/eskills_art"
+        android:layout_width="112dp"
+        android:layout_height="80dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/eskills_logo"
+        android:src="@drawable/placeholder_square"
+        />
+    <TextView
+        android:id="@+id/bundle_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:drawablePadding="6dp"
+        android:textStyle="bold"
+        android:text="Real Money Prizes!"
+        app:layout_constraintStart_toEndOf="@id/eskills_art"
+        app:layout_constraintEnd_toStartOf="@id/bundle_more"
+        app:layout_constraintTop_toTopOf="@id/eskills_logo"
+        app:layout_constraintBottom_toBottomOf="@id/eskills_logo"
+        android:fontFamily="sans-serif"
+        android:textSize="18sp"
+        android:textColor="#FFC800"
+        />
+    <TextView
+        style="@style/Aptoide.TextView.Regular.S.White"
+        app:layout_constraintStart_toStartOf="@id/bundle_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bundle_title"
+        android:layout_width="0dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="In e-Skills games you get rewarded when beating other players. Show off your skills now!"
+        android:lineHeight="20dp"
+        />
+    <android.widget.Button
+        android:id="@+id/bundle_more"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="@string/button_header_more"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/eskills_logo"
+        app:layout_constraintBottom_toBottomOf="@id/eskills_logo"
+        style="@style/Aptoide.Button.Flat"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/apps_list"
       android:layout_width="match_parent"
