--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -20,29 +20,32 @@
         android:id="@+id/eskills_logo"
         android:layout_width="32dp"
         android:layout_height="24dp"
-        app:layout_constraintStart_toStartOf="@id/eskills_art"
-        app:layout_constraintEnd_toEndOf="@id/eskills_art"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bundle_title"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="24dp"
-
         android:src="@drawable/eskills_logo"
+        android:elevation="1dp"
         />
     <ImageView
         android:id="@+id/eskills_art"
-        android:layout_width="112dp"
-        android:layout_height="80dp"
+        android:layout_width="136dp"
+        android:layout_height="120dp"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/eskills_logo"
-        android:src="@drawable/placeholder_square"
+        app:layout_constraintTop_toTopOf="@id/eskills_logo"
+        android:layout_marginTop="8dp"
+        android:src="@mipmap/eskills_art_foreground"
         />
     <TextView
         android:id="@+id/bundle_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawablePadding="6dp"
+        android:layout_marginStart="112dp"
         android:textStyle="bold"
         android:text="Real Money Prizes!"
-        app:layout_constraintStart_toEndOf="@id/eskills_art"
+        app:layout_constraintStart_toStartOf="@id/eskills_art"
         app:layout_constraintEnd_toStartOf="@id/bundle_more"
         app:layout_constraintTop_toTopOf="@id/eskills_logo"
         app:layout_constraintBottom_toBottomOf="@id/eskills_logo"
@@ -60,7 +63,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:text="In e-Skills games you get rewarded when beating other players. Show off your skills now!"
-        android:lineHeight="20dp"
+        android:lineSpacingExtra="4sp"
         />
     <android.widget.Button
         android:id="@+id/bundle_more"
