--- a/app/src/main/res/layout/action_bar_appview.xml
+++ b/app/src/main/res/layout/action_bar_appview.xml
@@ -34,6 +34,19 @@
         app:layout_collapseParallaxMultiplier="0.8"
         />
 
+    <ImageView
+        android:id="@+id/collapsing_eskills_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/eskills_bg"
+        android:visibility="gone"
+        app:layout_collapseMode="parallax"
+        app:layout_collapseParallaxMultiplier="0.8"
+        />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
