[APP-2035] Removes unnecessary file, adds TODOs

--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -53,6 +53,7 @@
         android:textSize="18sp"
         android:textColor="#FFC800"
         />
+    <!-- TODO extract color to resources -->
     <TextView
         style="@style/Aptoide.TextView.Regular.S.White"
         app:layout_constraintStart_toStartOf="@id/bundle_title"
