--- a/app/src/main/res/layout/eskills_wallet_install_layout.xml
+++ b/app/src/main/res/layout/eskills_wallet_install_layout.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/eskills_install_wallet_background"
     android:orientation="vertical"
-    tools:showIn="@layout/fragment_app_view"
+    android:paddingVertical="16dp"
+    android:animateLayoutChanges="true"
     >
 
   <RelativeLayout
@@ -15,47 +16,46 @@
       android:layout_marginLeft="16dp"
       android:layout_marginRight="16dp"
       android:layout_marginStart="16dp"
-      android:layout_marginTop="16dp"
       >
 
     <ImageView
-        android:id="@+id/wallet_icon"
+        android:id="@+id/eskills_wallet_icon"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginEnd="13dp"
         android:layout_marginRight="13dp"
-        android:src="@drawable/appcoins_wallet_icon"
+        android:src="@drawable/appcoins_wallet_icon_vec"
         />
 
     <TextView
-        android:id="@+id/wallet_title"
+        android:id="@+id/eskills_wallet_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/wallet_icon"
-        android:layout_toRightOf="@id/wallet_icon"
+        android:layout_toEndOf="@id/eskills_wallet_icon"
+        android:layout_toRightOf="@id/eskills_wallet_icon"
+        android:text="@string/appc_title_settings_appcoins_wallet"
         tools:text="AppCoins Wallet"
-        style="@style/Aptoide.TextView.Medium.M.BlackAlpha"
-        android:textColor="#FF6381"
+        style="@style/Aptoide.TextView.Medium.M"
+        android:textColor="@color/appc_pink"
         />
 
     <TextView
-        android:id="@+id/wallet_message"
+        android:id="@+id/eskills_wallet_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/wallet_title"
+        android:layout_below="@+id/eskills_wallet_title"
         android:layout_marginTop="2dp"
-        android:layout_toEndOf="@id/wallet_icon"
-        android:layout_toRightOf="@id/wallet_icon"
+        android:layout_toEndOf="@id/eskills_wallet_icon"
+        android:layout_toRightOf="@id/eskills_wallet_icon"
         tools:text="This support app will be installed after Legendary Heroes MOBA Offline."
-        style="@style/Aptoide.TextView.Medium.XS.GreyMedium"
+        style="@style/Aptoide.TextView.Medium.XS.White"
         />
   </RelativeLayout>
 
   <LinearLayout
-      android:id="@+id/wallet_download_info"
+      android:id="@+id/eskills_wallet_download_info"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="8dp"
       android:orientation="horizontal"
       android:visibility="gone"
       android:baselineAligned="false"
@@ -69,7 +69,7 @@
         android:layout_marginLeft="19dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="19dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
         android:orientation="vertical"
         >
@@ -82,7 +82,7 @@
           >
 
         <ProgressBar
-            android:id="@+id/wallet_download_progress_bar"
+            android:id="@+id/eskills_wallet_download_progress_bar"
             android:layout_width="fill_parent"
             android:layout_height="4dp"
             android:indeterminate="false"
@@ -91,14 +91,14 @@
       </FrameLayout>
 
       <RelativeLayout
-          android:id="@+id/wallet_download_info_layout"
+          android:id="@+id/eskills_wallet_download_info_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           >
 
         <TextView
-            android:id="@+id/wallet_download_download_state"
+            android:id="@+id/eskills_wallet_download_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
@@ -108,7 +108,7 @@
             />
 
         <TextView
-            android:id="@+id/wallet_download_progress_number"
+            android:id="@+id/eskills_wallet_download_progress_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -122,7 +122,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/wallet_install_controls_layout"
+        android:id="@+id/eskills_wallet_install_controls_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
@@ -133,31 +133,19 @@
         >
 
       <ImageView
-          android:id="@+id/wallet_download_cancel_button"
-          android:layout_width="48dp"
-          android:layout_height="48dp"
-          android:layout_gravity="center"
-          android:contentDescription="@null"
-          android:padding="12dp"
-          android:scaleType="center"
-          android:src="@drawable/ic_clear_action_black"
-          android:visibility="gone"
-          />
-
-      <ImageView
-          android:id="@+id/wallet_download_resume_download"
+          android:id="@+id/eskills_wallet_download_resume_download"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:layout_gravity="center"
           android:contentDescription="@null"
           android:padding="12dp"
           android:scaleType="fitCenter"
-          android:src="@drawable/ic_play_arrow_action_black"
+          android:src="@drawable/ic_play_arrow_action_light"
           android:visibility="gone"
           />
 
       <ImageView
-          android:id="@+id/wallet_download_pause_download"
+          android:id="@+id/eskills_wallet_download_pause_download"
           android:layout_width="48dp"
           android:layout_height="48dp"
           android:layout_gravity="center"
