--- a/app/src/main/res/layout/eskills_apps_bundle_item.xml
+++ b/app/src/main/res/layout/eskills_apps_bundle_item.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toStartOf="@id/bundle_title"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="24dp"
-        android:src="@drawable/eskills_logo"
+        android:src="@drawable/ic_eskills"
         android:elevation="1dp"
         android:contentDescription="@null"
         />
