--- a/app/src/main/res/layout/eskills_home_bundle_header.xml
+++ b/app/src/main/res/layout/eskills_home_bundle_header.xml
@@ -19,7 +19,7 @@
       android:text="@string/eskills_home_title"
       android:textStyle="bold"
       tools:text="Real Money Prizes"
-      app:drawableStartCompat="@drawable/eskills_logo"
+      app:drawableStartCompat="@drawable/ic_eskills"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
